Se realizó un html que saluda gracias a JavaScript

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hellow world</h1>
+    <input id="input-name" type="text">
+    <button onclick="saludar()">saludar</button>
     <script src="script.js"></script>
 </body>
 </html>
